Autumn资源加载文件解析，对象注册以及容器，应用上下文实现。